change submodule path from ssh to https to support github actions

--- a/.github/workflows/dnn_single_core.yml
+++ b/.github/workflows/dnn_single_core.yml
@@ -1,12 +1,13 @@
 on:
   issue_comment:
     branches:
-      - master
+      - main
 
   push:
     paths:
       - 'rtl/*.v'
       - 'rtl/tb/*.py'
+      - '.github/*'
 
 jobs:
   build:
